--- a/notebooks/Results.ipynb
+++ b/notebooks/Results.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-13T18:13:22.348577Z",
-     "start_time": "2019-02-13T18:13:21.805671Z"
+     "end_time": "2019-02-14T17:56:43.965845Z",
+     "start_time": "2019-02-14T17:56:43.654078Z"
     }
    },
    "outputs": [
@@ -27,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-13T18:13:22.354033Z",
-     "start_time": "2019-02-13T18:13:22.350901Z"
+     "end_time": "2019-02-14T17:56:43.972021Z",
+     "start_time": "2019-02-14T17:56:43.968652Z"
     }
    },
    "outputs": [],
@@ -42,8 +42,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-13T18:13:22.752325Z",
-     "start_time": "2019-02-13T18:13:22.356071Z"
+     "end_time": "2019-02-14T17:56:44.378104Z",
+     "start_time": "2019-02-14T17:56:43.974182Z"
     }
    },
    "outputs": [],
@@ -59,8 +59,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-13T18:13:22.766259Z",
-     "start_time": "2019-02-13T18:13:22.755680Z"
+     "end_time": "2019-02-14T17:56:44.390665Z",
+     "start_time": "2019-02-14T17:56:44.380585Z"
     }
    },
    "outputs": [],
@@ -75,100 +75,6 @@
     "\n",
     "# High resolution graphs\n",
     "%config InlineBackend.figure_format = 'retina'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-02-13T18:13:22.935168Z",
-     "start_time": "2019-02-13T18:13:22.932164Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Some useful functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-02-13T18:13:24.567383Z",
-     "start_time": "2019-02-13T18:13:24.560406Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def get_dataframe(run):\n",
-    "    data = pd.read_json('../results/' + run + '/logs.json', lines=True)\n",
-    "    data.set_index('epoch', inplace=True)\n",
-    "    data = pd.concat(\n",
-    "        [data.loc[data['phase'] == 'train'], data.loc[data['phase'] == 'valid']], \n",
-    "        keys=['train', 'valid'], \n",
-    "        axis=1\n",
-    "    )\n",
-    "    \n",
-    "    # We used to print epochs from 0 to n\n",
-    "    if data.index.values.min() == 0:\n",
-    "        data.index = [x + 1 if x == int(x) else x for x in data.index.values]\n",
-    "        data.sort_index(inplace=True)\n",
-    "    \n",
-    "    best_acc = data['valid', 'accuracy'].max() * 100\n",
-    "    best_acc_train = data['train', 'accuracy'].max() * 100\n",
-    "    \n",
-    "    print('Best train accuracy for {}: {:.2f}%'.format(run, best_acc_train))\n",
-    "    print('Best valid accuracy for {}: {:.2f}%'.format(run, best_acc))\n",
-    "    \n",
-    "    return data.drop('phase', axis=1, level=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-02-13T18:13:24.750812Z",
-     "start_time": "2019-02-13T18:13:24.740476Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def show_metric(data, metric, run='', save=False):\n",
-    "    plt.figure(figsize=(8, 5))\n",
-    "    \n",
-    "    for phase in ['train', 'valid']:\n",
-    "        d = data.xs([phase, metric], level=[0, 1], axis=1).dropna()\n",
-    "        \n",
-    "        if metric == 'accuracy':\n",
-    "            d *= 100\n",
-    "            \n",
-    "        plt.plot(d, label=phase)\n",
-    "    plt.legend()\n",
-    "    \n",
-    "    title = metric + ' for ' + run if len(run) > 0 else metric\n",
-    "    # plt.title(title)\n",
-    "    \n",
-    "    if metric == 'accuracy':\n",
-    "        plt.ylabel(r'Accuracy (\\%)')\n",
-    "    else:\n",
-    "        plt.ylabel('Loss')\n",
-    "        \n",
-    "    plt.xlabel(r'Number of epochs')\n",
-    "\n",
-    "    # plt.ylim(50, 100)\n",
-    "    \n",
-    "    if save:\n",
-    "        plt.savefig('outputs/' + run + '-' + metric + '.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -189,7 +95,7 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_json('../logs.json', lines=True)"
+    "data = pd.read_json('../logs/q2.json', lines=True)"
    ]
   },
   {
@@ -240,7 +146,7 @@
     "plt.xlabel('Epoch')\n",
     "plt.ylabel(r'Accuracy (\\%)')\n",
     "plt.xticks(list(range(1, 11)))\n",
-    "plt.savefig('toycnn-training.pdf', bbox_inches='tight')\n",
+    "plt.savefig('outputs/toycnn-training.pdf', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
